fixed scrollbars on firefox

--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -2,7 +2,7 @@
   background-color: white;
   border-bottom: 1px solid lightgray;
   max-width: 700px;
-  min-height: 80px;
+  overflow-y: hidden;
 }
 #post-date {
   font-size: 0.8em;
